--- a/age calculator/index.html
+++ b/age calculator/index.html
@@ -17,7 +17,7 @@
                 <div class="date">
                 <label for="birth-date">Birth Date  </label>
                 <input type="date" id="birth-date">
-                <p>Please enter birth date</p>
+                <p>Please enter valid birth date</p>
             </div>
 
             <div class="date">
